[maven-release-plugin] prepare release DataCleaner-5.0.2.1-rc1

--- a/components/i18n/pom.xml
+++ b/components/i18n/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-i18n</artifactId>
 	<dependencies>
@@ -17,4 +17,8 @@
 			<artifactId>icu4j</artifactId>
 		</dependency>
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1-rc1</tag>
+  </scm>
 </project>
